# data-lint-example

./: Cargo.toml  NVIM_SETUP.md  README.md  data-lint.lua  foo.templ  test.html
lua/: data-lint.lua
src/: main.rs
