[package]
name = "data-lint"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.24"
tree-sitter-html = "0.23"
tree-sitter-datastar = { path = "../tree-sitter-datastar" }
streaming-iterator = "0.1"
tree-sitter-heex = "0.8.1"
tree-sitter-templ = "2.2.0"
tree-sitter-blade = { git = "https://github.com/EmranMR/tree-sitter-blade", version = "0.12.0" }
